# auth

./: .buildinfo  .pre-commit-config.yaml  api.html  config.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  usage.html
.devcontainer/: devcontainer.json
.github/workflows/: build-docs.yml  do-release.yml  python-app.yml
_sources/: api.rst.txt
cchdo/auth/: __init__.py  __main__.py  session.py
cchdo/auth/test/: test_Auth.py
docs/: conf.py  index.rst
