[build-system]
requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "cchdo/auth/_version.py"
write_to_template = 'version = "{version}"'


[tool.mypy]

[[tool.mypy.overrides]]
module = [
    "pytest.*",
    "appdirs",
    "google.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
    # Tidy imports
    "TID",
]

[tool.ruff.isort]
known-first-party = ["cchdo"]