[flake8]
max-line-length = 88
ignore = 
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
    # Walrus Operator :=
    E701
    E231
exclude = 
    docs
    _version.py

[metadata]
name = cchdo.auth
author = CCHDO
author-email = cchdo@ucsd.edu
home-page = https://github.com/cchdo
license = BSD 3-clause
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
python_requires = ~=3.6
zip_safe = False
packages = find_namespace:
setup_requires = setuptools_scm
namespace_packages=
  cchdo
include_package_data=True
install_requires = 
  requests>=2.23.0
  click>=7.0.0
  appdirs>=1.4.0

[options.extras_require]
colab = 
    colab_env>=0.2.0
selftest = 
    pytest
    pyfakefs
dev = 
    %(selftest)s
    coverage==6.2
    pytest-cov==3.0.0
    pre-commit==2.16.0
    black==21.12b0
    codecov==2.1.12
    requests-mock==1.9.3
    mypy==0.930
    flake8==4.0.1
    twine==3.7.1
    pep517
    types-requests
docs = 
    Sphinx
    furo
complete = 
    %(colab)s
    %(dev)s
    %(docs)s

[tool:pytest]
xfail_strict=true
