[metadata]
name = cchdo.auth
author = CCHDO
author-email = cchdo@ucsd.edu
home-page = https://github.com/cchdo
license = BSD 3-clause
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
python_requires = ~=3.9
zip_safe = False
packages = find_namespace:
setup_requires = setuptools_scm
namespace_packages=
  cchdo
include_package_data=True
install_requires = 
  requests>=2.23.0
  click>=7.0.0
  appdirs>=1.4.0

[options.extras_require]
colab = 
    colab_env>=0.2.0
selftest = 
    pytest
    pyfakefs
dev = 
    %(selftest)s
    coverage==7.3.0
    pytest-cov==4.1.0
    pre-commit==3.3.3
    black==23.7.0
    requests-mock==1.11.0
    mypy==1.5.1
    types-requests
    ruff
docs = 
    Sphinx
    furo
complete = 
    %(colab)s
    %(dev)s
    %(docs)s

[tool:pytest]
xfail_strict=true
