[metadata]
name = cchdo.auth
author = CCHDO
author-email = cchdo@ucsd.edu
home-page = https://github.com/cchdo
license = BSD 3-clause
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
python_requires = ~=3.10
zip_safe = False
packages = find_namespace:
setup_requires = setuptools_scm
namespace_packages=
  cchdo
include_package_data=True
install_requires = 
  requests>=2.23.0
  click>=7.0.0
  appdirs>=1.4.0

[options.extras_require]
selftest = 
    pytest
    pyfakefs
dev = 
    %(selftest)s
    coverage
    pytest-cov
    pre-commit
    requests-mock
    mypy
    types-requests
    ruff
docs = 
    Sphinx
    furo
complete = 
    %(dev)s
    %(docs)s

[tool:pytest]
xfail_strict=true
